--- a/test_hummuspy.ipynb
+++ b/test_hummuspy.ipynb
@@ -1253,6 +1253,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "12ac885d-ff34-43f3-92f8-23e931e25969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5b3fb8ec-6fc4-412b-b4e8-51b3a454bd16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "a = a[a!=1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7038b46f-3733-4c1e-8f3b-3fd07d2d74bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "9fd43533-18c4-4558-8e6f-b1629e4a5000",
    "metadata": {},
