--- a/Vignette1.Rmd
+++ b/Vignette1.Rmd
@@ -9,7 +9,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(eval = FALSE)
+#knitr::opts_chunk$set(eval = FALSE)
 devtools::load_all("../hummus_package")
 ```
 ## General description of the vignette
@@ -45,6 +45,7 @@ The data used in this tutorial can be downloaded at : ibens repo link
 ```{r}
 scRNA <- read.table("data/real_example/hESC_Chen_scRNA.tsv")
 scATAC <- read.table("data/real_example/hESC_Chen_scATAC_bin.tsv")
+# subsetting data to infer faster a toy case : specific for the tutorial, dont keep it in real cases !!
 scRNA <- scRNA[1:700, ]
 scATAC <- scATAC[1:1000, ]
 ```
@@ -57,7 +58,7 @@ Additionally, it contains a motifs_db object, providing tf motifs informations, 
   - list of multiplex networks (one per modality) 
   - list of bipartites (one per connection between layers)
 
-#### 1.1. Transform in hummus object
+#### 1.1. Transform data into a hummus object
 ```{r}
 # Create seurat object with scRNA-seq data
 seurat <- SeuratObject::CreateSeuratObject(scRNA)
@@ -93,9 +94,10 @@ hummus@motifs_db <- get_tf2motifs() # by default human motifs
 ```{r}
 hummus <- bipartite_tfs2peaks(
               hummus_object = hummus,
-              tf_expr_assay = "RNA", #use to filter TF on only expressed TFs, if NULL, all TFs with motifs are used
+              tf_expr_assay = "RNA", # use to filter TF on only expressed TFs,
+                                     # if NULL, all TFs with motifs are used
               peak_assay = "peaks",
-              tf_network_name = "TF_network",
+              tf_multiplex_name = "TF",
               genome = BSgenome.Hsapiens.UCSC.hg38::BSgenome.Hsapiens.UCSC.hg38,
               )
 ```
@@ -123,26 +125,32 @@ hummus <- compute_tf_network(hummus,
                                                 # will be considered
                             verbose = 1,
                             multiplex_name = "TF",
-                            )
+                            tf_network_name = "TF_network")
 ```
 
 
-#### 2.4. Compute and save gene network from scRNA-seq w/ GENIE3
+#### 2.4. Compute gene network from scRNA-seq w/ GENIE3
 ```{r}
-hummus <- compute_gene_network(hummus,
-                              gene_assay = "RNA",
-                              method = "GENIE3",
-                              verbose = 1,
-                              number_cores = 5, # GENIE3 method can be ran
-                                                # parallelised on multiple cores
-                              store_network = TRUE, # each network can be saved 
-                                                    # when computed with hummus
-                              output_file = "gene_network.tsv")
+hummus <- compute_gene_network(
+              hummus,
+              gene_assay = "RNA",
+              method = "GENIE3",
+              verbose = 1,
+              number_cores = 5, # GENIE3 method can be ran
+                                # parallelised on multiple cores
+              store_network = FALSE, # by default : FALSE
+                                     # each network can be saved 
+                                     # when computed with hummus
+              output_file = "gene_network.tsv")
 ```
 
 #### 2.5. Compute the peak network from scATAC-seq w/ Cicero
 ```{r}
-hummus <- compute_atac_peak_network(hummus)
+hummus <- compute_atac_peak_network(hummus,
+              atac_assay = "peaks",
+              verbose = 1,
+              genome = BSgenome.Hsapiens.UCSC.hg38::BSgenome.Hsapiens.UCSC.hg38,
+              store_network = FALSE)  
 ```
 
 
@@ -152,5 +160,14 @@ hummus <- compute_atac_peak_network(hummus)
 save_multilayer(hummus = hummus, "chen_multilayer")
 ```
 
-
-#### 3.2. 
+#### 3.2. Define GRN
+```{r}
+grn <- define_grn(
+  hummus,
+  multilayer_f = "chen_multilayer",
+  njobs = 5
+  )
+```
+```{r}
+head(grn)
+```
