update env name vignette

--- a/examples/chen_grn.Rmd
+++ b/examples/chen_grn.Rmd
@@ -50,7 +50,7 @@ The data used in this tutorial can be downloaded at : ibens repo link
 ```{r}
 library(HuMMuS)
 library(reticulate)
-use_condaenv("base")
+use_condaenv("hummuspy_env")
 ```
 
 ## 1. Initialisation of HuMMuS object
